<resources>
    <string name="app_name">myDrugPal</string>
    <string name="Heisenberg_info">Heisenberg Info Page</string>
    <string name="Whiskey_info">Whiskey Info Page</string>
    <string name="Cannabis_info">Cannabis Info Page</string>
    <string name="Acid_info">Acid Info Page</string>
    <string name="CocaCola_info">CocaCola Info Page</string>
    <string name="CocaCola_button_name">CocaCola</string>
    <string name="Heisenberg_button_name">Heisenberg</string>
    <string name="Cannabis_button_name">Cannabis</string>
    <string name="Whiskey_button_name">Whiskey</string>
    <string name="Acid_button_name">Acid</string>
    <string name="enter_substance_name"><font color="grey">enter substance name</font></string>
    <string name="enter_substance_info"><font color="grey">enter substance info</font></string>
    <string name="LoginSuccessMessage">You Have Successfully Logged In</string>
    <string name="Title_MyDrugPal">MyDrugPal</string>
    <string name="label_login">LOGIN</string>
    <string name="hint_email">Email:</string>
    <string name="hint_password">Password:</string>
    <string name="devTeamInfo">The development team for myDrugPal is: Alicia Wong, Emma Travers, Ian Sifton, Jocelyn MacDonald, Megan Brock,  and Richard Purcell.</string>
    <string name="myDrugPalInfo">myDrugPal helps users to track their daily intake of substances such as alcohol and cannabis.  Users can choose from a list of known substances as well as adding personalized substances.  Intake quantity of a given substance is easily recorded.  Intake summary can be viewed by day or week.  Enjoy!</string>

    <string-array name="type_array">
        <item>Stimulant</item>
        <item>Depressant</item>
        <item>Hallucinogen</item>
        <item>Dissociative</item>
        <item>Inhalant</item>
        <item>Cannabis</item>
        <item>Opioid</item>
    </string-array>

</resources>